--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel='stylesheet' href='%PUBLIC_URL%/reset.css'>
     <title>React App</title>
   </head>
   <body>
